7.Metrics_SLA/kube-prober/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-prober
  labels:
    app: my-prober
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-prober
  template:
    metadata:
      labels:
        app: my-prober
    spec:
      containers:
      - name: my-prober
        image: my-prober:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 9092
