7.Metrics_SLA/kube-prober/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-prober
spec:
  type: NodePort
  selector:
    app: my-prober
  ports:
    - protocol: TCP
      name: app
      port: 9092
      targetPort: 9092
      nodePort: 30004
